<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.avans.prog3les1.cinecenter.Presentation.OverviewActivity">


    <TextView
        android:id="@+id/textViewActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/order_overview"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewActivityTitle"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textViewMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/movie"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewMovie"
            android:text="@string/date"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewDate"
            android:text="@string/time"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewTime"
            android:text="@string/seats"
            android:textSize="20sp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/textViewSeats"
            android:background="#000" />

        <ListView
            android:id="@+id/listViewOverview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/textViewTotalText"
            android:layout_below="@+id/line" />

        <TextView
            android:id="@+id/textViewTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_order"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/total"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/button_order"
            android:text="@string/_1298_00"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:text="@string/to_payment" />

    </RelativeLayout>

</RelativeLayout>
