<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.avans.prog3les1.cinecenter.Presentation.RateActivity">

    <TextView
        android:id="@+id/textViewComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewComplete"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="15dp"
        android:text="@string/rate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewAmount"
        android:layout_alignBottom="@+id/textViewAmount"
        android:layout_toLeftOf="@+id/textViewAmount"
        android:layout_toStartOf="@+id/textViewAmount"
        android:padding="15dp"
        android:text="@string/price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/amount"
        android:textSize="16sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textViewType"
        android:background="#000000" />

    <ListView
        android:id="@+id/listViewOverview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/line1"
        android:layout_above="@+id/textViewPriceTotal" />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_above="@+id/textViewPriceTotal"/>

    <TextView
        android:id="@+id/textViewPriceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_above="@+id/activityRateButton"
        android:layout_toLeftOf="@+id/textViewAmount"
        android:layout_toStartOf="@+id/textViewAmount" />

        <TextView
            android:id="@+id/textViewAmountTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/listViewOverview"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_above="@+id/activityRateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/activityRateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/select_seat_s"/>

    </RelativeLayout>

</RelativeLayout>

