<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.avans.prog3les1.cinecenter.Presentation.SeatActivity">

    <TextView
        android:id="@+id/textViewComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/textViewComplete">

        <ImageView
            android:id="@+id/imageViewFree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_seat_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewFree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewFree"
            android:layout_toEndOf="@+id/imageViewFree"
            android:layout_toRightOf="@+id/imageViewFree"
            android:text="@string/free"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"/>

        <ImageView
            android:id="@+id/imageViewBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_seat_red_24dp"
            android:layout_below="@+id/imageViewFree"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewBooked"
            android:layout_toEndOf="@+id/imageViewBooked"
            android:layout_toRightOf="@+id/imageViewBooked"
            android:text="@string/booked"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp" />


        <ImageView
            android:id="@+id/imageViewYourSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_seat_blue_24dp"
            android:layout_below="@+id/imageViewBooked"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewYourSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewYourSeat"
            android:layout_toEndOf="@+id/imageViewYourSeat"
            android:layout_toRightOf="@+id/imageViewYourSeat"
            android:text="@string/your_seat"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/imageViewYourSeat"
            android:background="#000"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="screen"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <GridView
            android:id="@+id/SeatGridview"
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:layout_above="@+id/button_order"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewScreen"
            android:columnWidth="50dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:text="@string/order" />

    </RelativeLayout>

</RelativeLayout>
